Recipes delete and edit commands are using the new matching of NamespacedKeys now.