@@ -84,9 +84,6 @@ public class DeleteSubCommand extends AbstractSubCommand {
     @Override
     protected @Nullable
     List<String> onTabComplete(@NotNull CommandSender var1, @NotNull String var3, @NotNull String[] args) {
-        List<String> results = new ArrayList<>();
-        List<String> recipes = customCrafting.getRegistries().getRecipes().keySet().stream().map(NamespacedKey::toString).toList();
-        StringUtil.copyPartialMatches(args[args.length - 1], recipes, results);
-        return results;
+        return NamespacedKeyUtils.getPartialMatches(args[args.length - 1], customCrafting.getRegistries().getRecipes().keySet()).stream().map(NamespacedKey::toString).collect(Collectors.toList());
     }
 }
